appId: tech.jala.android.lite
name: AT14
tags:
  - AT14
---
- clearState
- launchApp

# Login akun jala.automation
- runFlow: login_email.yaml
# Pilih menu [Kolam]
- waitForAnimationToEnd:
    timeout: 20000
- extendedWaitUntil:
    visible: 
        text: "Kolam" # or any other selector
    timeout: 10000
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
# Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 5000 # ms
    label: "Tap untuk pilih Icon masuk Menu Kolam"
# Pilih field Tambak = "Test Automation"
- waitForAnimationToEnd:
    timeout: 20000
- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk pilih Field Tambak"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Test Automation"

- waitForAnimationToEnd:
    timeout: 5000

# Pilih icon Gear pada pojok kanan atas
- tapOn:
    point: 573, 81 
    label: "Tap untuk pilih icon gear pada pojok kanan atas"

- waitForAnimationToEnd:
    timeout: 5000
# Pilih tombol [Hapus]
- tapOn: 
    text: "Hapus"
    retryTapIfNoChange: false
# Pilih tombol [Ya, saya yakin]
- tapOn: 
    text: "Ya, Saya Yakin"
    retryTapIfNoChange: false
- stopApp
  
  

  





  


