appId: tech.jala.android.lite
name: AT16
tags:
  - AT16
---
- clearState
- launchApp


## [READ]~
- runFlow: login_email.yaml

#Bugfix
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000


- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms
    label: "Tap untuk masuk pada menu [Kolam]"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"


- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk memilih field tambak 'Test Automation'"
- tapOn: 
    text: "Test Automation"
    delay: 2000
    
- tapOn:
    text: "Kolam"
    index: 0
    repeat: 3
    delay: 2000

- tapOn:
    point: 544,379
    label: "Tap icon gear untuk melihat settingan Kolam"
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

##ASSERT DATA
- assertVisible: "AUT2.1"
- assertVisible: "120"
- assertVisible: "1,5"

- stopApp

    


















  
  

  





  


