appId: tech.jala.android.lite
name: AT17
tags:
  - AT17
---
- clearState
- launchApp

# 1. Login akun jala.automation~
- runFlow: login_email.yaml
#Bugfix
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000

# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms
    label: "Tap untuk memilih menu Kolam"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"
# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk memilih field tambak yang diinginkan"
- tapOn: "Test Automation"
# 4. Pilih tombol gear pada card nama kolam
- tapOn:
    point: 544,379
    label: "Tap pada tombol gear pada card nama kolam"
# 5. Ubah field 'Panjang' = "11"
- tapOn:
    point: 170,546
    label: "Tap untuk mengedit/ubah pada field [Panjang]"
- eraseText
- inputText: "11"
# 6. Ubah field 'Lebar' = "13"
- tapOn:
    point: 453,551
    label: "Tap untuk mengedit/ubah pada field [Lebar]"
- eraseText
- inputText: "13"
- hideKeyboard
# 7. Ubah field 'Anco' = "2"
- tapOn: 
    text: "4" 
    label: "Pick untuk jumlah ubah field ANCO"
- tapOn: "2"
# 8. Pilih tombol [Simpan]
- tapOn: "Simpan"
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

##ASSERT DATA NANTI  MASUKKAN KESINI

- stopApp


















  
  

  





  


