appId: tech.jala.android.lite
name: AT18
tags:
  - AT18
---
- clearState
- launchApp
    
# 1. Login akun jala.automation~
- runFlow: login_email.yaml
#Bugfix
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000

# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms
    label: "Tap untuk memilih menu Kolam"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"
# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk memilih field tambak yang diinginkan [Test Automation]"
- tapOn: "Test Automation"
# 4. Pilih icon Gear pada card kolam
- tapOn:
    point: 544,379
    label: "Tap pada icon gear di card kolam"
# 5. Pilih tombol [Hapus]
- tapOn: "Hapus"
# 6. Pilih tombol [Ya] pada modal konfirmasi
- tapOn: "Ya, Saya Yakin"

###Assert Data NANTI MASUKKAN KESINI

- stopApp



















  
  

  





  


