appId: tech.jala.android.lite
name: AT20
tags:
  - AT20
---
- clearState
- launchApp

## [CREATE]
# 1. Login akun jala.automationa
- runFlow: login_email.yaml


#Bugfix
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000





# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms
    label: "Tap untuk masuk pada menu [Kolam]"


- waitForAnimationToEnd:
    timeout: 5000

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk masuk pada field tambak yang diinginkan [Test Automation]"
- tapOn: "Test Automation"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 288, 414
    label: "Tap pada siklus yang telah dibuat [AUT2.1]"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 566, 79
    label: "Tap icon Hamburger di pojok kanan atas"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: "Pengaturan Siklus"

#Assert Data
- assertVisible: "100.000"
- assertVisible: "Bruto"
- assertVisible: "1"
- assertVisible: "3.0"
- assertVisible: "Penaeus Vannamei"

- scrollUntilVisible:
    element:
      text: "Hapus Siklus" # or any other selector
    direction: DOWN # DOWN|UP|LEFT|RIGHT (optional, default: DOWN)
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- assertVisible: "15.000"




















  
  

  





  


