appId: tech.jala.android.lite
name: AT21
tags:
  - AT21
---
- clearState
- launchApp

## [CREATE]
# 1. Login akun jala.automationa
- runFlow: login_email.yaml



#Bugfix
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000





# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 5000 # ms
    label: "Tap untuk masuk pada menu [Kolam]"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
    label: "Tap untuk memilih field tambak yang diinginkan"
- tapOn: "Test Automation"
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 288, 414
    label: "Tap untuk masuk pada siklus yang telah dibuat [AUT2.1]"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 566, 79
    label: "Tap pada icon Hamburger di pojok kanan atas"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: "Pengaturan Siklus"

#Edit data Total Tebar
- tapOn: 
    text: "100.000"
    label: "Mengedit data pada field Total Tebar"
- eraseText
- inputText: "120000"

- scrollUntilVisible:
    element:
      text: "Hapus Siklus"
    direction: DOWN 
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

#Edit data Harga Pakan
- tapOn: 
    text: "15.000"
    label: "Mengedit data pada field Harga Pakan"
- eraseText
- inputText: "17000"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- tapOn: "Ubah Siklus"
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- stopApp





















  
  

  





  


