appId: tech.jala.android.lite
name: AT10
tags:
  - AT10
---
- clearState
- launchApp

- tapOn:
    label: "Pilih tombol [Masuk]"
    text: "Masuk"
    

- tapOn: 
    text: "Masuk dengan No HP atau Email"
    label: "Pilih tombol [Masuk dengan No HP atau Email]"
    


- tapOn: 
    text: "No. Handphone atau Email"
    label: "Masukkan alamat email automation_1@gmail.com"
    index: 1
- inputText: 
    text: "automation_1@gmail.com"
    label: "Ketik email automation_1@gmail.com"
    


- tapOn:
    text: "Kata Sandi"
    label: "Masukkan password: jalaistimewa"
    index: 1

- inputText: 
    text: "jalaistimewa"
    label: "Ketik password"

- tapOn:
    text: "Masuk"
    label: "Menyembunyikan keyboard terlebih dahulu"

- tapOn: 
    text: "Masuk"
    label: "Pilih tombol [Masuk]"
    index: 1

- waitForAnimationToEnd:
    timeout: 5000

# Assert Data untuk masuk ke Page Beranda


## Lanjut Step

- tapOn:
    point: 545, 1155
    label: "Tap pada Akun"

- tapOn:
    text: "Pengaturan"
    label: "Tap Pengaturan"

- tapOn:
    text: "Hapus Akun"

- tapOn:
    text: "Ya, Saya Yakin"

- tapOn: "Kata sandi saat ini"
- inputText: "jalaistimewa"

- hideKeyboard
- tapOn: 
    point: 42, 713

- tapOn: "Hapus"
- stopApp
    




