appId: tech.jala.android.lite
name: AT6
tags:
  - AT6
---
- clearState
- launchApp

- tapOn: "Masuk"

- tapOn: "Masuk dengan No HP atau Email"
- tapOn: "Lupa kata sandi?"
- tapOn: "Gunakan Nomor HP"

- tapOn: 
    point: 259, 798
    label: "Tap pada field nomor hp"
- inputText: "8888321277"

- hideKeyboard
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"


- tapOn: "Kirim kode verifikasi via SMS"
- tapOn: 
    point: 51, 807
    label: "Tap pada field untuk pengisian OTP"
- inputText: "123456"

- tapOn: 
    text: "Kirim"
    enabled: on
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"


- tapOn: "Kata Sandi"
- inputText: "jalamaguwo"

- hideKeyboard
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- tapOn: "Konfirmasi Kata Sandi"
- inputText: "jalamaguwo"

- hideKeyboard
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- tapOn: 
    text: "Buat kata sandi baru"
    enabled: on

# Assert Data bahwa kata sandi berhasil diperbarui diganti dengan kata masuk
- assertVisible: 
    text: "Masuk"

- stopApp
