appId: tech.jala.android.lite
name: AT7
tags:
  - AT7
---
- clearState
- launchApp

- tapOn:
    label: "Pilih tombol [Masuk]"
    text: "Masuk"
    

- tapOn: 
    text: "Masuk dengan No HP atau Email"
    label: "Pilih tombol [Masuk dengan No HP atau Email]"
    


- tapOn: 
    text: "No. Handphone atau Email"
    label: "Masukkan alamat email jala.automation@gmail.com"
    index: 1
- inputText: 
    text: "jala.automation@gmail.com"
    label: "Ketik email jala.automation@gmail.com"
    


- tapOn:
    text: "Kata Sandi"
    label: "Masukkan password: jalaistimewa"
    index: 1

- inputText: 
    text: "sandibaru"
    label: "Ketik password yang tidak sesuai"

- tapOn:
    text: "Masuk"
    label: "Menyembunyikan keyboard terlebih dahulu"

- tapOn: 
    text: "Masuk"
    label: "Pilih tombol [Masuk]"
    index: 1

- waitForAnimationToEnd:
    timeout: 5000
    
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

# Assert Data bahwa credential (Email/No.Handphone Tidak sesuai) sehingga muncul validasi Gagal Masuk !
# validasi gagal masuk ini menggunakan notifikasi yang keluar pop up saat gagal masuk
- assertVisible: 
    text: "Gagal Masuk"

- stopApp
